Layout bug fixed

--- a/src/common/Header.css
+++ b/src/common/Header.css
@@ -13,9 +13,10 @@ nav {
     align-items: center;
     height: 4rem;
     box-shadow: 0px 0px 2px;
+    background-color: var(--tab-label) !important;
 }
 
-nav h1 {
+/* nav h1 {
     font-size: 18px;
     font-weight: 800;
     background: linear-gradient(to right, #003366, #66B2B2, #FF6F61, #B3669E);
@@ -23,8 +24,13 @@ nav h1 {
     color: transparent;
     position: relative;
     left: 1rem;
-}
+} */
 
+nav img {
+    background-color: #11627c;
+    width: 170px;
+    padding: 20px 10px;
+}
 nav .header {
     font-size: 12px;
     font-weight: 600;
@@ -37,18 +43,17 @@ nav .header {
     justify-content: center;
     padding: 0px 10px;
     width: 100px;
-    color: #000;
+    color:white;
 }
 
 nav .active {
     position: absolute;
-    height: 0.2rem;
-    top: 3.3rem;
-    z-index: 0;
+    z-index: -1;
     width: 6rem;
-    background-color: #036e78;
+    background-color: #11627c;
     transition: all .5s ease 0s;
     display: none;
+    padding: 33px;
 }
 
 .active.visible {
@@ -60,6 +65,7 @@ nav .person_name {
     width: 200px;
     font-size: 15px;
     font-weight: 800;
+    color: white;
 }
 
 nav .avatar {
@@ -85,7 +91,7 @@ nav .avatar {
         top: 3.3rem;
         z-index: 0;
         width: 4.5rem;
-        background-color: #036e78;
+        background-color: #fff;
         transition: all .5s ease 0s;
         display: none;
     }
