--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@
   --color2: #66B2B2;
   --color3: #FF6F61;
   --color4: #B3669E;
+  --tab-label: #157b9c;
 }
